Fix progress tracker styling: - refactor applicantDataHeader to use <table> and associated govuk styling - right align values in applicantDataHeader - apply two-thirds styling to applicantDataHeader & one-third styling to applicant photo - apply two-thirds styling to cancellation info box

--- a/pets-ui/src/globals.scss
+++ b/pets-ui/src/globals.scss
@@ -29,9 +29,12 @@ input[type='file'].hide-text {
   flex-grow: 1;
 }
 
+.progress-tracker-header-cells {
+  text-align: right;
+}
+
 .progress-tracker-photo-container {
   margin-left: 20px;
-  border: 1px solid #b1b4b6;
   display: flex;
   align-items: stretch;
 }
@@ -39,7 +42,7 @@ input[type='file'].hide-text {
 .progress-tracker-photo {
   display: block;
   height: 100%;
-  max-height: 150px;
+  max-height: 200px;
   width: auto;
   object-fit: cover;
 }
